# fuzai

./: .gitignore  .uvrc  CLAUDE.md  ENVIRONMENT_VARIABLES.md  README.md  app.py  audio_capture.py  dtw_analyzer.py  email_service.py  frequency_analyzer.py  image_capturer.py  line_service.py  notifier.py  pyproject.toml  servo_controller.py  slack_service.py  sound_detector.py  test_dtw_analyzer.py  test_email_service.py  test_image_capturer.py  test_pattern_equivalence.py  test_slack_service.py  test_sound_detector.py
servo_controller/: README.md  app.py  otp_manager.py  requirements.txt  sound_detection.py
sound_detect/: README.md  example_usage.py  line_service.py  main.py  pyproject.toml  sound_detect.py  sound_detector.py  test_sound_detector.py
templates/: unlock.html
