[project]
name = "sound-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "flask>=3.0.0",
    "rpi",
    "resend>=2.11.0",
    # "rpi-gpio>=0.7.1",
    "dtaidistance>=2.3.13",
    "librosa>=0.11.0",
]

[tool.uv.sources]
rpi = { git = "https://github.com/nosix/raspberry-gpio-emulator" }
