[project]
name = "sound-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=2.0.0",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "flask>=3.0.0",
    "resend>=2.11.0",
    "rpi-gpio>=0.7.1 ; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "rpi ; platform_machine != 'armv7l' and platform_machine != 'aarch64'",
    "scikit-learn==1.6.0",
    "librosa==0.10.2",
    "numba==0.60.0",
    "slack-sdk>=3.36.0",
    "opencv-python>=4.12.0.88",
]

[tool.uv.sources]
rpi = { git = "https://github.com/nosix/raspberry-gpio-emulator" }
