[project]
name = "sound-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
